--- a/rock.html
+++ b/rock.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina de marcadores</title>
+    <title>Odin rocks</title>
     <link rel="stylesheet" href="css\rocks.css">
     <style>
         .winner {
@@ -34,7 +34,7 @@
 
 
 
-        <p> <button id="resets"> Reset</button> Number of Victories
+        <p> <button id="resets"> Reset</button> Required  Victories
             <select name="limits" id="limits">
                 <option value="2">2</option>
                 <option value="3">3</option>
